--- a/iCare/app/src/main/res/layout/activity_register_mobile.xml
+++ b/iCare/app/src/main/res/layout/activity_register_mobile.xml
@@ -31,8 +31,8 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/corner_edt"
                 android:gravity="center"
-                android:textSize="14sp"
-                android:hint="@string/your_mobile" />
+                android:hint="@string/your_mobile"
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -50,6 +50,7 @@
                     android:layout_weight="2"
                     android:background="@drawable/corner_edt"
                     android:gravity="center"
+                    android:hint="@string/verify_code"
                     android:textSize="14sp" />
 
                 <Button
