--- a/iCare/app/src/main/res/values/colors.xml
+++ b/iCare/app/src/main/res/values/colors.xml
@@ -7,9 +7,12 @@
     <color name="white">#ffffff</color>
     <color name="black">#313132</color>
     <color name="gray">#999999</color>
-    <color name="colorTopbar">#a90003</color>
     <color name="bar_color">#f6f6f6</color>
     <color name="green">#03ab3b</color>
+    <color name="bg_deep_blue">#051532</color>
+    <color name="txt_black_deep">#282727</color>
+    <color name="txt_black_normal">#454444</color>
+    <color name="line_gray">#d2d2d2</color>
 
     <!--环信-->
     <color name="common_top_bar_blue">#4ebcd3</color>
@@ -52,8 +55,9 @@
     <color name="holo_blue_bright">#ff00ddff</color>
     <color name="holo_green_light">#ff99cc00</color>
     <color name="holo_orange_light">#ffffbb33</color>
-    <color name="holo_red_light">#ffff4444</color>
+    <color name="holo_red_light">#ff4444</color>
     <color name="emojicon_tab_selected">#D9D9D9</color>
     <color name="emojicon_tab_nomal">#ffffff</color>
+
 
 </resources>
