--- a/iCare/app/src/main/res/layout/dialog_loading.xml
+++ b/iCare/app/src/main/res/layout/dialog_loading.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     android:background="#aa000000"
     android:focusable="true"
+    android:focusableInTouchMode="true"
     android:gravity="center"
-    android:orientation="vertical"
-    android:focusableInTouchMode="true">
+    android:orientation="vertical">
 
 
     <com.sundy.icare.ui.progressbar.CircleProgressBar
