--- a/iCare/app/src/main/res/layout/fragment_me.xml
+++ b/iCare/app/src/main/res/layout/fragment_me.xml
@@ -61,8 +61,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
-                        android:text="Sundy Xu"
-                        android:textColor="@color/material_grey_850"
+                        android:text="@string/please_login"
+                        android:textColor="@color/white"
                         android:textSize="14sp" />
                 </LinearLayout>
             </RelativeLayout>
