--- a/iCare/app/src/main/res/layout/activity_main.xml
+++ b/iCare/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/frameContent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/frameMenu" />
 
-    <fragment
-        android:id="@+id/frameMenu"
-        android:name="com.sundy.icare.fragment.TabMenuFragment"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimens_tab_menu_height"
-        android:layout_alignParentBottom="true" />
-
-
-</RelativeLayout>
+</FrameLayout>
