修改绑定邮箱

--- a/iCare/app/src/main/res/layout/fragment_user_detail.xml
+++ b/iCare/app/src/main/res/layout/fragment_user_detail.xml
@@ -160,6 +160,7 @@
                 android:background="@color/material_grey_100" />
 
             <RelativeLayout
+                android:id="@+id/relative_email"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/settings_item_height"
                 android:layout_marginLeft="15dp"
@@ -181,10 +182,10 @@
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/txtKey_Email"
                     android:gravity="center_vertical"
+                    android:hint="@string/not_yet_bind_email"
                     android:singleLine="true"
                     android:textColor="@color/material_grey_850"
-                    android:textSize="15sp"
-                    android:hint="@string/not_yet_bind_email"/>
+                    android:textSize="15sp" />
             </RelativeLayout>
 
             <ImageView
