--- a/iCare/app/src/main/res/layout/activity_loading.xml
+++ b/iCare/app/src/main/res/layout/activity_loading.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoadingActivity">
 
-    <ImageView
+
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/img_splash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitXY"
-        android:src="@mipmap/icon_loading" />
+        fresco:actualImageScaleType="fitXY"
+        fresco:fadeDuration="1000"
+        fresco:failureImage="@mipmap/icon_loading"
+        fresco:failureImageScaleType="fitXY" />
+
+    <com.sundy.icare.ui.MCVideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -27,11 +35,11 @@
             android:id="@+id/txt_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/btn_skip"
             android:text="5秒"
             android:textColor="@color/black_deep"
-            android:textSize="15sp"
-            android:layout_marginRight="10dp" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/btn_skip"
