添加百度地图定位

--- a/iCare/app/src/main/res/layout/fragment_change_password.xml
+++ b/iCare/app/src/main/res/layout/fragment_change_password.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
+    android:onClick="onClick"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -34,9 +35,9 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:gravity="right"
+            android:text="123"
             android:textColor="@color/white"
-            android:textSize="14sp"
-            android:text="123"/>
+            android:textSize="14sp" />
     </RelativeLayout>
 
     <RelativeLayout
