--- a/iCare/app/src/main/res/layout/fragment_chat.xml
+++ b/iCare/app/src/main/res/layout/fragment_chat.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:animateLayoutChanges="true"
-    android:background="#f2f0eb">
+    android:background="#f2f0eb"
+    android:onClick="onClick">
 
     <RelativeLayout
         android:layout_width="match_parent"
