--- a/iCare/app/src/main/res/layout/fragment_choose_address.xml
+++ b/iCare/app/src/main/res/layout/fragment_choose_address.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:onClick="onClick"
     android:orientation="vertical">
 
     <include
@@ -36,7 +36,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
                     android:layout_weight="1"
-                    android:background="@drawable/corner_bg_gray_light"
+                    android:background="@drawable/corner_bg_light_gray"
                     android:orientation="horizontal"
                     android:padding="3dp">
 
@@ -47,8 +47,10 @@
                         android:layout_marginRight="5dp"
                         android:layout_toLeftOf="@+id/img1"
                         android:gravity="center_vertical"
-                        android:textColor="@color/material_grey_900"
-                        android:textSize="15sp" />
+                        android:textColor="@color/material_grey_800"
+                        android:textSize="15sp"
+                        android:text="广东"
+                        android:paddingLeft="6dp" />
 
                     <ImageView
                         android:id="@+id/img1"
@@ -65,7 +67,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginRight="6dp"
                     android:layout_weight="1"
-                    android:background="@drawable/corner_bg_gray_light"
+                    android:background="@drawable/corner_bg_light_gray"
                     android:orientation="horizontal"
                     android:padding="3dp">
 
@@ -76,8 +78,11 @@
                         android:layout_marginRight="5dp"
                         android:layout_toLeftOf="@+id/img2"
                         android:gravity="center_vertical"
-                        android:textColor="@color/material_grey_900"
-                        android:textSize="15sp" />
+                        android:textColor="@color/material_grey_800"
+                        android:textSize="15sp"
+                        android:text="广州"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="6dp" />
 
                     <ImageView
                         android:id="@+id/img2"
@@ -93,7 +98,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@drawable/corner_bg_gray_light"
+                    android:background="@drawable/corner_bg_light_gray"
                     android:orientation="horizontal"
                     android:padding="3dp">
 
@@ -104,8 +109,11 @@
                         android:layout_marginRight="5dp"
                         android:layout_toLeftOf="@+id/img3"
                         android:gravity="center_vertical"
-                        android:textColor="@color/material_grey_900"
-                        android:textSize="15sp" />
+                        android:textColor="@color/material_grey_800"
+                        android:textSize="15sp"
+                        android:text="天河区"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="6dp" />
 
                     <ImageView
                         android:id="@+id/img3"
@@ -132,8 +140,8 @@
 
         <ImageView
             android:id="@+id/img_location"
-            android:layout_width="80dp"
-            android:layout_height="90dp"
+            android:layout_width="50dp"
+            android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:padding="5dp"
