--- a/iCare/app/src/main/res/layout/fragment_forget_password_mobile.xml
+++ b/iCare/app/src/main/res/layout/fragment_forget_password_mobile.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:onClick="onClick">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -58,8 +59,8 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/corner_edt"
                 android:gravity="center"
-                android:textSize="14sp"
-                android:hint="您的手机号码" />
+                android:hint="您的手机号码"
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
