--- a/iCare/app/src/main/res/layout/item_notification.xml
+++ b/iCare/app/src/main/res/layout/item_notification.xml
@@ -116,7 +116,7 @@
                 android:layout_width="50dp"
                 android:layout_height="26dp"
                 android:background="@drawable/corner_btn_green"
-                android:text="@string/apply"
+                android:text="@string/invite"
                 android:textColor="@color/white"
                 android:visibility="gone" />
 
